Set up environment variable in kubernetes

--- a/backend-deployment.yaml
+++ b/backend-deployment.yaml
@@ -9,7 +9,7 @@ metadata:
     io.kompose.service: backend
   name: backend
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       io.kompose.service: backend
@@ -30,11 +30,20 @@ spec:
       containers:
         - env:
             - name: AWS_ACCESS_KEY
-              value: ${AWS_ACCESS_KEY}
+              valueFrom:
+                configMapKeyRef:
+                  name: environment-config
+                  key: environment.aws_access_key
             - name: AWS_SECRET_ACCESS_KEY
-              value: ${AWS_SECRET_KEY}
+              valueFrom:
+                configMapKeyRef:
+                  name: environment-config
+                  key: environment.aws_secret_access_key
             - name: BUCKET_NAME
-              value: ${BUCKET_NAME}
+              valueFrom:
+                configMapKeyRef:
+                  name: environment-config
+                  key: environment.bucket_name
             - name: JWT_SECRET
               value: wizardsecret
             - name: JWT_REFRESH_SECRET
@@ -42,11 +51,20 @@ spec:
             - name: REDIS_QUEUE
               value: redis
             - name: CLOUDFRONT_KEY_ID
-              value: ${CLOUDFRONT_KEY_ID}
+              valueFrom:
+                configMapKeyRef:
+                  name: environment-config
+                  key: environment.cloudfront_key_id
             - name: CLOUDFRONT_ORIGIN_URL
-              value: ${CLOUDFRONT_ORIGIN_URL}
+              valueFrom:
+                configMapKeyRef:
+                  name: environment-config
+                  key: environment.cloudfront_origin_url
             - name: CLOUDFRONT_PRIVATE_KEY_BASE64
-              value: ${CLOUDFRONT_PRIVATE_KEY_BASE64}
+              valueFrom:
+                configMapKeyRef:
+                  name: environment-config
+                  key: environment.cloudfront_private_key_base64
           image: ghcr.io/suphahero-coderz/toktik-backend:latest
           name: backend
           ports:
