--- a/postgres-deployment.yaml
+++ b/postgres-deployment.yaml
@@ -37,5 +37,12 @@ spec:
           ports:
             - containerPort: 5432
           resources: {}
+          volumeMounts:
+            - mountPath: /var/lib/postgresql/data
+              name: postgres-pv-claim
+      volumes:
+        - name: postgres-pv-claim
+          persistentVolumeClaim:
+            claimName: postgres-pv-claim
       restartPolicy: Always
 status: {}
