--- a/thumbnail-worker-deployment.yaml
+++ b/thumbnail-worker-deployment.yaml
@@ -29,11 +29,20 @@ spec:
       containers:
         - env:
             - name: AWS_ACCESS_KEY
-              value: ${AWS_ACCESS_KEY}
+              valueFrom:
+                configMapKeyRef:
+                  name: environment-config
+                  key: environment.aws_access_key
             - name: AWS_SECRET_ACCESS_KEY
-              value: ${AWS_SECRET_ACCESS_KEY}
+              valueFrom:
+                configMapKeyRef:
+                  name: environment-config
+                  key: environment.aws_secret_access_key
             - name: BUCKET_NAME
-              value: ${BUCKET_NAME}
+              valueFrom:
+                configMapKeyRef:
+                  name: environment-config
+                  key: environment.bucket_name
             - name: REDIS_QUEUE
               value: redis
           image: ghcr.io/suphahero-coderz/toktik-thumbnail-worker:latest
